# HeadlessPiPlayer

./: Cargo.toml  README.md
src/: file_manager.rs  flash_drive_observer.rs  lib.rs  main.rs  video_player.rs  webserver.rs  wifi_manager.rs
src/webserver/: mod.rs
