[package]
name = "headless_pi_player"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version="1.45.0", features = [ "full" ]}

axum = { version = "0.8.4", features = ["multipart"] }
tower-http = { version = "0.6.4", features = ["trace"] }

notify = "8.0.0"

thiserror = "2.0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

ctrlc = "3.4.6"

serde =  { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"

vlc-rs = "0.3.0"

[patch.crates-io]
vlc-rs = { path = "vendor/vlc-rs" }